<resources>
    <string name="app_name">aTerminal</string>
</resources>
